# agno-yaml

./: .env.example  README.md  agno_providers.yaml  main.py  pyproject.toml
.github/workflows/: publish.yml
agno_yaml/: agno_providers.py  agno_utils.py  main.py  yaml_loader.py
examples/: agent_with_tools.yaml  audio_agent.yaml  basic_agent.yaml  finance_agent.yaml  image_agent.yaml  news_agency_team.yaml
